Fri Oct 10 03:20:03 GMT 2014  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* common/debuglog.h: Suppress unused typedef warnings from debugging
	  logging macros, which occur in functions which always exit via
	  throwing an exception.

Thu Oct 09 23:01:37 GMT 2014  Olly Betts <olly@survex.com>

	* backends/brass/brass_database.cc,
	  backends/brass/brass_spellingwordslist.cc,
	  backends/chert/chert_database.cc,
	  backends/chert/chert_spellingwordslist.cc,matcher/mergepostlist.cc:
	  Fix mismatched return type in debug logging annotations so that code
	  compiles when configured with --enable-log.  These are already fixed
	  on trunk.

Thu Oct 09 22:59:34 GMT 2014  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* common/pretty.h: Fix debug logging code to compile with clang.
	  (fixes #657, reported by Germán M. Bravo)

Thu Oct 09 10:41:59 GMT 2014  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* tests/Makefile.am: Remove .replicatmp upon "make clean".

Thu Oct 09 10:31:53 GMT 2014  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* docs/overview.rst: Add missing database path to example of using
	  xapian-progsrv in a stub database file.

Thu Oct 09 10:26:48 GMT 2014  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* tests/harness/fdtracker.cc: Fix code typo in recent change to skip
	  apparent leaks of /dev/urandom.

Sat Sep 06 02:11:02 GMT 2014  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* tests/harness/fdtracker.cc: Don't report apparent leaks of fds
	  opened on /dev/urandom - at least on Linux, something in the C
	  library seems to lazily open it, and the report of a possible leak
	  followed by assurance that it's OK really is just noise we could
	  do without.

Fri Sep 05 15:11:46 GMT 2014  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* include/xapian/compactor.h: Fix formatting of doxygen comment.
